--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    api 'me.jessyan:arms:2.5.2'
-    api 'me.jessyan:arms-imageloader-glide:2.5.2'
+//    api 'me.jessyan:arms:2.5.2'
+//    api 'me.jessyan:arms-imageloader-glide:2.5.2'
 
 
     //view
@@ -59,8 +60,8 @@ dependencies {
     api rootProject.ext.dependencies["paginate"]
     api rootProject.ext.dependencies["lottie"]
 
-    api 'me.jessyan:arms:2.5.2'
-    api 'me.jessyan:arms-imageloader-glide:2.5.2'
+//    api 'me.jessyan:arms:2.5.2'
+//    api 'me.jessyan:arms-imageloader-glide:2.5.2'
 
     //tools
     api rootProject.ext.dependencies["androideventbus"]
@@ -85,4 +86,6 @@ dependencies {
     //leakcanary
     debugImplementation  "com.squareup.leakcanary:leakcanary-android:1.6.3"
     releaseImplementation  "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
